--- a/src/.env
+++ b/src/.env
@@ -1,16 +1,16 @@
 PORT= 4000
-GMAIL_SERVICE=gmail
-GMAIL_USER=makesense
+GMAIL_SERVICE=
+GMAIL_USER=
 GMAIL_PASS=
-GMAIL_CLIENT_ID=106692832748-5g20epjjr87f04u56r17vahpgufit1fp.apps.googleusercontent.com
+GMAIL_CLIENT_ID=
 SUBJECT_MAIL="Notificación de "
-MONGO_URI=mongodb+srv://coder:hack@cluster0.bwimz.mongodb.net/getonbrdjunior?retryWrites=true&w=majority
-MONGO_MAX_AGE=600000
+MONGO_URI=
+MONGO_MAX_AGE=
 #File;Mongo;Mysql;Memory
 FLAG_DB=Mongo
-SALTROUNDS=10
-TOKEN_SECRET="coderhouse2021"
-JWT_MAX_AGE='120s'
-ADMIN_EMAIL='nosemimail@gmail.com'
-GOOGLE_DRIVE_CLIENT_ID=787999166
+SALTROUNDS=
+TOKEN_SECRET=
+JWT_MAX_AGE=
+ADMIN_EMAIL=
+GOOGLE_DRIVE_CLIENT_ID=
 NODE_ENV=production
