--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.0.3",
     "moment": "^2.29.1",
+    "mongodb": "^4.2.2",
     "mongoose": "^5.13.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
